@@ -2,13 +2,15 @@
 - BugFix: When editing a QSO the name was not shown.
 - BugFix: STX_String field was not always imported properly.
 - BugFix: Fixed a minor bug in log table regarding the prop_mode foreign key.
+
 - KLog is able to import QSOs with no BAND field if FREQ field is present.
 - KLog offers the user a default value if RST_TX or RST_RX field is not present when importing.
 - GUI: Added some shortcuts in the preference widget.
-- Support of realtime upload, modification & removal of a single QSO from ClubLog.org.
+- Support of realtime upload, modification & removal of a single QSO to/from ClubLog.org.
 - Updated the DB with the PROP_MODE options.
 - GUI: Added a Propagation Mode Combobox.
-- GUI: Prop_Mode combobox automatically goes to SAT if sat name or sat mode are defined
+- GUI: Prop_Mode combobox automatically goes to SAT if sat name or sat mode are defined.
+- GUI: Added a Find DX-QSL requested option.
 
 April-2015 - 0.9.1.1
 - Bugfix: Editing a QSO with satellite data was not properly done and caused some errors.
